deploymentIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "lbforapps"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /app1/*
            backend:
              serviceName: app1
              servicePort: 80
          - path: /app2/*
            backend:
              serviceName: app2
              servicePort: 80
